2006-04-20  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/paint-funcs.[ch]: convolve_region() takes a
	const matrix parameter.

	* app/paint/gimpconvolve.c
	* app/tools/gimpiscissorstool.c: use const convolution matrices.

	* libgimpbase/gimputils.c (gimp_utf8_strtrim): avoid another small
	relocation.

	* modules/colorsel_cmyk.c
	* regexrepl/regex.c: use const arrays of const strings.

2006-04-19  Simon Budig  <simon@gimp.org>

	* plug-ins/imagemap/imap_main.c: removed unused code
	Fixes bug #339046

	* tools/pdbgen/pdb/paths.pdb: removed deprecated docs
	* app/pdb/paths_cmds.c: regenerated

2006-04-19  Sven Neumann  <sven@gimp.org>

	* app/composite/make-installer.py: generate const arrays.

	* app/composite/gimp-composite-altivec-installer.c
	* app/composite/gimp-composite-generic-installer.c
	* app/composite/gimp-composite-mmx-installer.c
	* app/composite/gimp-composite-sse-installer.c
	* app/composite/gimp-composite-sse2-installer.c: regenerated.

2006-04-19  Sven Neumann  <sven@gimp.org>

	* app/dialogs/user-install-dialog.c: removed an unneeded call to
	gtk_widget_realize() (bug #324254). Sprinkled const qualifiers to
	avoid relocations.

2006-04-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c: fixed bug in range calculation
	that caused display errors in the last row (bug #338378).

2006-04-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg.c (run): initialize global variables. Fixes
	bug #338373.

	* plug-ins/jpeg/NEWS: removed.

	* app/core/gimpparamspecs.c: indentation.

2006-04-18  Manish Singh  <yosh@gimp.org>

	* app/core/gimppickable.c (gimp_pickable_flush): do not return
	a value with void functions. Fixes bug #338904.

2006-04-18  Sven Neumann  <sven@gimp.org>

	* app/actions/plug-in-actions.c: indentation.

2006-04-18  Sven Neumann  <sven@gimp.org>

	* app/actions/dialogs-commands.c
	* app/config/gimpconfig-dump.c
	* app/core/gimpcontext.c
	* app/core/gimpdocumentlist.c
	* app/core/gimpparasitelist.c